--- a/styles.css/index.css
+++ b/styles.css/index.css
@@ -9,25 +9,47 @@ h1 {
     padding: 20px;
 }
 
-ul {
-    text-align: center;
-}
 
-.nav-item{
+
+.nav-item {
     
     display:inline-block;
     list-style-type:circle;
     font-family: arial;
     font-size: 30px;
     padding-right: 40px;
+    text-align: center;
+    
 }
 
 
 h3 {
     color:teal;
     font-family: arial;
-    font-size: 20px;
-    font-weight:100;
+    font-size: 25px;
+    font-weight:200;
     padding-left: 30px;
+
+}
+
+.yoga-studios {
+    color: green;
+    font-size: 18px;
+    background-color: burlywood;
     
+
+
+}
+
+.self-practice {
+    color: green;
+    font-size: 18px;
+    background-color: burlywood;
+
+}
+
+.yoga-philosophy {
+    color: green;
+    font-size: 18px;
+    background-color: burlywood;
 }
