--- a/styles.css/index.css
+++ b/styles.css/index.css
@@ -11,16 +11,15 @@ h1 {
 
 
 
-.nav-item {
-    
-    display:inline-block;
-    list-style-type:circle;
+
+nav {
     font-family: arial;
     font-size: 30px;
     padding-right: 40px;
     text-align: center;
-    
-}
+    list-style-position: inside;
+} 
+
 
 
 h3 {
