--- a/styles.css/index.css
+++ b/styles.css/index.css
@@ -33,7 +33,7 @@ h3 {
     font-size: 25px;
     font-weight:200;
     padding-left: 30px;
-
+    text-decoration: underline;
 }
 
 
@@ -83,6 +83,7 @@ h3 {
     padding-bottom: 5px;
     margin-bottom: 50px;
     text-align:center;
+    list-style-position: inside;
 }
 
 .solopractice-image {
@@ -116,6 +117,7 @@ h3 {
     padding-bottom: 5px;
     margin-bottom: 50px;
     text-align:center;
+    list-style-position: inside;
 }
 
 .philosophycontent-image {
@@ -139,4 +141,12 @@ h3 {
     position: relative;
     left: 50%;
     margin-bottom: 50px;
+}
+
+footer {
+    font-size: 20px;
+    font-family: arial;
+    padding-bottom: 50px;
+    padding-left: 50px;
+    
 }
